force-app/main/default/objects/IntegrationRecordLink__c/IntegrationRecordLink__c.object-meta.xml
<CustomObject>
    <description>Persistent link between a Salesforce record and an external ERP/CRM record.</description>
    <label>Integration Record Link</label>
    <nameField>
        <displayFormat>LINK-{000000}</displayFormat>
        <label>Integration Record Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Record Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>