force-app/main/default/objects/IntegrationRecordLink__c/fields/ExternalObject__c.field-meta.xml
<CustomField>
    <fullName>ExternalObject__c</fullName>
    <label>External Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>