force-app/main/default/objects/IntegrationRecordLink__c/fields/IntegrationFlow__c.field-meta.xml
<CustomField>
    <fullName>IntegrationFlow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Flow</label>
    <referenceTo>IntegrationFlow__c</referenceTo>
    <relationshipLabel>Integration Record Links</relationshipLabel>
    <relationshipName>IntegrationRecordLinks</relationshipName>
    <type>Lookup</type>
</CustomField>