force-app/main/default/objects/IntegrationRecordLink__c/fields/LastCorrelationId__c.field-meta.xml
<CustomField>
    <fullName>LastCorrelationId__c</fullName>
    <label>Last Correlation ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>