force-app/main/default/objects/IntegrationRecordLink__c/fields/LastSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>LastSyncStatus__c</fullName>
    <label>Last Sync Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <default>true</default>
                <label>Success</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>