force-app/main/default/objects/IntegrationRecordLink__c/fields/LinkKey__c.field-meta.xml
<CustomField>
    <fullName>LinkKey__c</fullName>
    <externalId>true</externalId>
    <label>Link Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>