force-app/main/default/objects/IntegrationRecordLink__c/fields/SalesforceObject__c.field-meta.xml
<CustomField>
    <fullName>SalesforceObject__c</fullName>
    <label>Salesforce Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>